data/derived/fa15/progs/unify/prog2831.ml.out
Characters 73-74:
  let fixpoint (f,b) = wwhile (let n x = let ff = f b in (f , b = ff) in n,b);;
                                                                           ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
